--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -28,7 +28,7 @@
           {
           "@context": "https://www.openactive.io/ns/oa.jsonld",
           "type": "Event",
-          "url": "...",
+          "url": "http://example.org",
           "name": "Swim For All",
           "location": "..."
           }
